welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:4: error: not found: value color
if (color.green==true) {avance()} else {recule}
    ^SlugTracking:4: error: type mismatch;
 found   : Unit
 required: Boolean
if (color.green==true) {avance()} else {recule}
                              ^SlugTracking:4: error: type mismatch;
 found   : Unit
 required: Boolean
if (color.green==true) {avance()} else {recule}
                                        ^