welcome.lessons.welcome.methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
avance() ; getCouleurSol()
if (color.green==true) {avance()} else {recule}

}        
